objects/FieloSVY__SurveyQuestion__c.object
<CustomObject>
    <fields>
        <fullName>FieloSVY__Columns__c</fullName>
        <description>Amount of columns for Radio buttons or Checkbox options</description>
        <inlineHelpText>Amount of columns for Radio buttons or Checkbox options</inlineHelpText>
        <label>Columns</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloSVY__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloSVY__Options__c</fullName>
        <inlineHelpText>Question options separated by comma</inlineHelpText>
        <label>Options</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Order__c</fullName>
        <inlineHelpText>Order that this question will appear in the survey</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this questions is required to submit the survey</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>FieloSVY__Survey__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Radio Vertical</fullName>
                </value>
                <value>
                    <fullName>Radio Horizontal</fullName>
                </value>
                <value>
                    <fullName>Checkboxes</fullName>
                </value>
                <value>
                    <fullName>Free Text</fullName>
                </value>
                <value>
                    <fullName>Numeric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>SQ-{00000}</displayFormat>
        <label>Survey Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>